После первого ревью

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="pop-up__container">
         <button class="button button_type_close-button" type="button"></button>
         <p class="pop-up__title">Новое место</p>
-        <form class="pop-up__form pop-up__form_type_add" name="pop-up-form">
+        <form class="pop-up__form pop-up__form_type_add" name="pop-up-form-add">
           <fieldset class="pop-up__field">
             <input type="text" class="pop-up__edit pop-up__edit_type_img-name" placeholder="Название" name="img-name">
             <input type="url" class="pop-up__edit pop-up__edit_type_link" placeholder="Ссылка на картинку" name="link">
@@ -83,7 +83,7 @@
       <!-- <button class="button button__close-img button_type_close-button " type="button"></button> -->
       <figure class="pop-up__img-container">
         <button class="button  button_type_close-button " type="button"></button>
-        <img class="pop-up__img" src=" " alt=" ">
+        <img class="pop-up__img" src="#" alt="#">
         <figcaption class="pop-up__img-caption"></figcaption>
       </figure>
     </div>
@@ -93,7 +93,7 @@
     <template id="elements-template">
       <div class="element">
         <button class="button button_type_delete-button" type="button"></button>
-        <img class="element__img" src=" " alt=" ">
+        <img class="element__img" src="#" alt="#">
         <div class="element__items">
           <h2 class="element__title"></h2>
           <button class="button button_type_like-button" type="button"></button>
