После сквозной проверки 1

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button class="button button_type_close-button" type="button"></button>
         <p class="pop-up__title">Редактировать профиль</p>
         <form
-          id="form"
+          id="form-edit"
           name="pop-up-form"
           class="pop-up__form pop-up__form_type_edit"
           novalidate>
@@ -107,7 +107,7 @@
         <button class="button button_type_close-button" type="button"></button>
         <p class="pop-up__title">Новое место</p>
         <form
-          id="form"
+          id="form-add"
           name="pop-up-form-add"        
           class="pop-up__form pop-up__form_type_add"
           novalidate>
