--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 
 
     <!-- script -->
+    <script src="./scripts/constants.js"></script>
     <script src="./scripts/validate.js"></script>
     <script src="./scripts/cards.js"></script>
     <script src="./scripts/scripts.js"></script>
