--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="html,css,grid">
     <meta name="author" content="Андрей">
     <title>Mesto</title>
+    <link rel="icon" type="image" href="./images/Icon.svg">
     <link rel="stylesheet" href="./pages/index.css">
   </head>
 
@@ -161,7 +162,7 @@
 
 
     <!-- elements-template -->
-    <template id="elements-template">
+    <template class ="elements-template">
       <div class="element">
         <button class="button button_type_delete-button" type="button"></button>
         <img class="element__img" src="#" alt="#">
@@ -175,10 +176,7 @@
 
 
     <!-- script -->
-    <script src="./scripts/constants.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/scripts.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
     <!-- /script -->
   </body>
 </html>
