Проблема с добавлением карточек и сбросом вали-ции

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       <!-- /profile -->
 
 
-      <!-- elements -->
+      <!-- место для карт -->
       <section class="elements">
 
       </section>
-      <!-- /elements -->
+      <!-- /место для карт -->
 
     </main>
 
