--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="html,css,grid">
     <meta name="author" content="Андрей">
     <title>Mesto</title>
-    <link rel="icon" type="image" href="./images/Icon.svg">
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="icon" type="image" href="./images/fl.png">
+    <link rel="stylesheet" href="./style/index.css">
   </head>
 
 
@@ -174,7 +174,7 @@
 
 
     <!-- script -->
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
     <!-- /script -->
   </body>
 </html>
