До вебпака. Проблем нет.

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 
               <input 
                 id="input-profile-name"
-                name="input-profile-person-name"
+                name="name"
                 type="text"
                 class="pop-up__input pop-up__input_type_profile-name"
                 placeholder="Имя"
@@ -81,7 +81,7 @@
 
               <input
                 id="input-profile-description"
-                name="input-profile-person-description"
+                name="description"
                 type="text"
                 class="pop-up__input pop-up__input_type_profile-description"
                 placeholder="Описание"
@@ -115,7 +115,7 @@
 
               <input 
                 id="input-add-name"
-                name="input-add-img-name"
+                name="name"
                 type="text"
                 class="pop-up__input pop-up__input_type_img-name"
                 placeholder="Название"
@@ -129,7 +129,7 @@
 
               <input
                 id="input-add-url"
-                name="input-add-img-url"
+                name="link"
                 type="url"
                 class="pop-up__input pop-up__input_type_img-url"
                 placeholder="Ссылка на картинку"
