С Api. Проблем не обнаружено.

--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@
 
 
     <!-- script -->
-    <script type="module" src="./pages/index.js"></script>
+    <!-- <script type="module" src="./pages/index.js"></script> -->
     <!-- /script -->
   </body>
 </html>
