С Api. После 1 ревью.

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     <!-- /footer -->
     
 
-    <!-- попап редактирования -->
+    <!-- попап профиля -->
     <section class="pop-up pop-up_type_profile-edit pop-up_type_overlay">
       <div class="pop-up__container">
         <button class="button button_type_close-button" type="button"></button>
@@ -98,7 +98,7 @@
         </form>
       </div>
     </section>
-    <!-- /попап редактирования -->
+    <!-- /попап профиля -->
 
 
     <!-- попап добавления -->
@@ -223,9 +223,5 @@
     </template>
     <!-- /elements-template -->
 
-
-    <!-- script -->
-    <!-- <script type="module" src="./pages/index.js"></script> -->
-    <!-- /script -->
   </body>
 </html>
